--- a/index.html
+++ b/index.html
@@ -10,38 +10,78 @@
 <body>
     <div class="container">
         <header>
-            <h1>SlingCheck</h1>
+            <h1>🍼 SlingCheck</h1>
             <p class="subtitle">Проверьте правильность положения ребенка в слинге или рюкзаке</p>
         </header>
 
         <main>
-            <!-- Настройки API -->
+            <!-- Настройки API и модели -->
             <section class="settings-section">
                 <div class="settings-card">
-                    <h2>Настройки</h2>
+                    <h2>⚙️ Настройки</h2>
 
-                    <div class="form-group">
-                        <label for="modelSelect">Выберите модель AI:</label>
-                        <select id="modelSelect" class="model-select">
-                            <!-- Опции заполняются динамически из config.js -->
-                        </select>
+                    <div class="settings-grid">
+                        <!-- Левая колонка: Модель и API -->
+                        <div class="settings-column">
+                            <div class="form-group">
+                                <label for="modelSelect">Модель AI:</label>
+                                <select id="modelSelect" class="model-select">
+                                    <!-- Заполняется динамически -->
+                                </select>
+                                <small id="modelHint" class="hint"></small>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="apiKeyInput">
+                                    API ключ:
+                                    <button id="helpBtn" class="btn-help" type="button" title="Как получить API ключ?">?</button>
+                                </label>
+                                <div class="api-key-input-group">
+                                    <input type="text" id="apiKeyInput" placeholder="Введите API ключ" autocomplete="off">
+                                    <button id="saveKeyBtn" class="btn btn-secondary">Сохранить</button>
+                                </div>
+                                <small class="hint">Ключ хранится локально в браузере</small>
+                            </div>
+                        </div>
+
+                        <!-- Правая колонка: Режим анализа -->
+                        <div class="settings-column">
+                            <div class="form-group">
+                                <label for="modeSelect">Режим анализа:</label>
+                                <select id="modeSelect" class="mode-select">
+                                    <!-- Заполняется динамически -->
+                                </select>
+                                <small id="modeDescription" class="hint"></small>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="checkbox-label">
+                                    <input type="checkbox" id="showPromptEditor">
+                                    <span>Показать редактор промптов (для отладки)</span>
+                                </label>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="apiKeyInput">
-                            API ключ:
-                            <button id="helpBtn" class="btn-help" type="button" title="Как получить API ключ?">?</button>
-                        </label>
-                        <div class="api-key-input-group">
-                            <input
-                                type="text"
-                                id="apiKeyInput"
-                                placeholder="Введите API ключ"
-                                autocomplete="off"
-                            >
-                            <button id="saveKeyBtn" class="btn btn-secondary">Сохранить</button>
+                    <!-- Редактор промптов (скрыт по умолчанию) -->
+                    <div id="promptEditorSection" class="prompt-editor-section" style="display: none;">
+                        <h3>📝 Редактор промптов</h3>
+                        <p class="hint">Изменения применяются только к текущей сессии</p>
+
+                        <div class="form-group">
+                            <label for="systemPrompt">System prompt:</label>
+                            <textarea id="systemPrompt" rows="4" placeholder="System prompt..."></textarea>
                         </div>
-                        <small class="hint">Ключ сохраняется в браузере и не передается никуда, кроме выбранного AI провайдера</small>
+
+                        <div class="form-group">
+                            <label for="userPrompt">User prompt:</label>
+                            <textarea id="userPrompt" rows="12" placeholder="User prompt..."></textarea>
+                        </div>
+
+                        <div class="prompt-actions">
+                            <button id="resetPromptsBtn" class="btn btn-secondary btn-small">Сбросить к дефолту</button>
+                            <button id="copyPromptsBtn" class="btn btn-secondary btn-small">Копировать в буфер</button>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -66,15 +106,17 @@
                 <div class="preview-container" id="previewContainer" style="display: none;">
                     <img id="imagePreview" alt="Предпросмотр фото">
                     <button id="analyzeBtn" class="btn btn-large btn-primary" disabled>
-                        Анализировать
+                        🔍 Анализировать
                     </button>
+                    <button id="clearImageBtn" class="btn btn-secondary btn-small">Очистить</button>
                 </div>
             </section>
 
             <!-- Индикатор загрузки -->
             <div id="loading" class="loading-indicator" style="display: none;">
                 <div class="spinner"></div>
-                <p>Анализируем фото...</p>
+                <p id="loadingText">Анализируем фото...</p>
+                <small id="loadingStep" class="hint"></small>
             </div>
 
             <!-- Результаты -->
@@ -84,11 +126,11 @@
         </main>
 
         <footer>
-            <p>
-                Demo version
-            </p>
+            <p>SlingCheck v2.0 — Demo version</p>
             <small>
-                Это приложение помогает оценить эргономику, но не заменяет консультацию специалиста
+                Это приложение помогает оценить эргономику, но не заменяет консультацию специалиста.
+                <br>Основано на стандартах <a href="https://babyslingsafety.co.uk/" target="_blank">T.I.C.K.S.</a>
+                и <a href="https://hipdysplasia.org/baby-wearing/" target="_blank">IHDI</a>.
             </small>
         </footer>
     </div>
@@ -100,51 +142,65 @@
             <h2>Как получить API ключ?</h2>
 
             <div class="help-section">
-                <h3>📘 Anthropic Claude</h3>
+                <h3>🟣 Anthropic Claude (рекомендуется)</h3>
                 <ol>
                     <li>Перейдите на <a href="https://console.anthropic.com/" target="_blank">console.anthropic.com</a></li>
                     <li>Зарегистрируйтесь или войдите в аккаунт</li>
                     <li>Откройте раздел <strong>API Keys</strong></li>
                     <li>Нажмите <strong>Create Key</strong></li>
-                    <li>Скопируйте ключ (он начинается с <code>sk-ant-...</code>)</li>
-                    <li>Вставьте его в поле "API ключ" выше</li>
+                    <li>Скопируйте ключ (начинается с <code>sk-ant-...</code>)</li>
                 </ol>
-                <p class="info-note">💡 Claude предоставляет $5 бесплатных кредитов для новых пользователей</p>
+                <p class="info-note">
+                    💡 Рекомендуем <strong>Claude Opus 4</strong> для лучшего качества анализа изображений.
+                    Claude Sonnet 4 — хороший баланс цены и качества.
+                </p>
             </div>
 
             <div class="help-section">
-                <h3>🤖 OpenAI GPT-4</h3>
+                <h3>🟢 OpenAI GPT-4</h3>
                 <ol>
                     <li>Перейдите на <a href="https://platform.openai.com/" target="_blank">platform.openai.com</a></li>
-                    <li>Зарегистрируйтесь или войдите в аккаунт</li>
-                    <li>Откройте <strong>API Keys</strong> в меню слева</li>
+                    <li>Зарегистрируйтесь или войдите</li>
+                    <li>Откройте <strong>API Keys</strong></li>
                     <li>Нажмите <strong>Create new secret key</strong></li>
-                    <li>Скопируйте ключ (он начинается с <code>sk-...</code>)</li>
-                    <li>Вставьте его в поле "API ключ" выше</li>
                 </ol>
-                <p class="info-note">⚠️ Для GPT-4 Vision требуется платный аккаунт с пополненным балансом</p>
+                <p class="info-note">⚠️ Для GPT-4o требуется платный аккаунт</p>
+            </div>
+
+            <div class="help-section">
+                <h3>📊 Режимы анализа</h3>
+                <ul>
+                    <li><strong>Простой (v1)</strong> — базовый анализ, может ошибаться в определении позиции</li>
+                    <li><strong>Структурированный (v2)</strong> — использует стандарты T.I.C.K.S. и IHDI</li>
+                    <li><strong>С верификацией (v3)</strong> — модель сначала описывает что видит, потом оценивает</li>
+                    <li><strong>Двухэтапный</strong> — отдельно определяет позицию, потом анализирует (2 вызова API)</li>
+                </ul>
+                <p class="info-note">💡 Рекомендуем <strong>v3</strong> или <strong>Двухэтапный</strong> для более точных результатов</p>
+            </div>
+
+            <div class="help-section">
+                <h3>💰 Примерная стоимость</h3>
+                <table class="pricing-table">
+                    <tr><th>Модель</th><th>~Цена за анализ</th></tr>
+                    <tr><td>Claude 3.5 Sonnet</td><td>$0.003</td></tr>
+                    <tr><td>Claude Sonnet 4</td><td>$0.005</td></tr>
+                    <tr><td>Claude Opus 4</td><td>$0.02</td></tr>
+                    <tr><td>GPT-4o</td><td>$0.01</td></tr>
+                </table>
+                <small>Двухэтапный режим удваивает стоимость</small>
             </div>
 
             <div class="help-section">
                 <h3>🔒 Безопасность</h3>
                 <ul>
-                    <li>API ключ хранится только в вашем браузере (localStorage)</li>
-                    <li>Ключ отправляется напрямую в API провайдера, не на сторонние серверы</li>
-                    <li>Никогда не делитесь своим API ключом</li>
-                    <li>Вы можете удалить ключ в любой момент, очистив localStorage браузера</li>
+                    <li>API ключ хранится только в вашем браузере</li>
+                    <li>Фото отправляются напрямую в API провайдера</li>
+                    <li>Никакие данные не сохраняются на сторонних серверах</li>
                 </ul>
-            </div>
-
-            <div class="help-section">
-                <h3>💰 Стоимость</h3>
-                <p><strong>Claude 3.5 Sonnet:</strong> ~$3 за 1000 изображений</p>
-                <p><strong>GPT-4 Vision:</strong> ~$0.01-0.03 за изображение</p>
-                <p class="info-note">Цены приблизительные и зависят от размера изображения</p>
             </div>
         </div>
     </div>
 
-    <!-- Подключаем скрипты в правильном порядке -->
     <script src="js/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/app.js"></script>
