add age identification for 2 stages

--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
                             </div>
                             
                             <div class="form-group">
+                                <label for="manualAge">Возраст ребёнка (опционально)</label>
+                                <select id="manualAge">
+                                    <option value="">Модель определит сама</option>
+                                    <option value="МЛАДЕНЕЦ (0-6 мес)">Младенец (0-6 мес)</option>
+                                    <option value="МАЛЫШ (6-18 мес)">Малыш (6-18 мес)</option>
+                                    <option value="ТОДДЛЕР (1.5-3 года)">Тоддлер (1.5-3 года)</option>
+                                    <option value="ДОШКОЛЬНИК (3-6 лет)">Дошкольник (3-6 лет)</option>
+                                    <option value="ШКОЛЬНИК (6+ лет)">Школьник (6+ лет)</option>
+                                </select>
+                            </div>
+                            
+                            <div class="form-group">
                                 <label for="manualLegs">Положение ног (опционально)</label>
                                 <select id="manualLegs">
                                     <option value="">Модель определит сама</option>
